--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="action_localsearch">local search</string>
     <string name="action_newnote">new note</string>
     <string name="action_more">more</string>
-
+	<string name="action_newbook">new book</string>
+	<string name="note_title">笔记标题</string>
+	<string name="write_down_your_note">写下你的笔记</string>
+    
 </resources>
