完成照片记录读取功能，未能完成修改笔记照片删除问题

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,5 +20,6 @@
 	<string name="action_newbook">new book</string>
 	<string name="note_title">笔记标题</string>
 	<string name="write_down_your_note">写下你的笔记</string>
+	<string name="defaultbook">默认笔记本</string>
     
 </resources>
